fix for image resizing on narrow view

--- a/app/assets/stylesheets/master.css
+++ b/app/assets/stylesheets/master.css
@@ -120,9 +120,9 @@ p { font-size: 1.2em; }
 .posts li { background: #1F1F1F; display: inline-block; margin: 0px 5px 8px 0px; max-width: 300px; width: 24%; }
 .posts li a { color: #fff; font-weight: 300; }
 .posts li a:hover { background: none; }
-.posts li img { height: 150px; width: 100%; }
-.posts .date { display: block; font-size: 0.8em; margin-top: 8px; }
-.posts .title { font-size: 1em; margin: 0; padding: 5px; }
+.posts li img { min-width: 140px; width: 100%; }
+.posts .date { font-size: 0.8em; margin: 0px; padding: 0px 5px 5px; }
+.posts .title { font-size: 1em; margin: 0px; padding: 5px; }
 
 .preview:hover { background: none; }
 .preview img { border: 1px solid #000; width: 100%; }
@@ -133,9 +133,8 @@ p { font-size: 1.2em; }
 .projects li { background: #1F1F1F; display: inline-block; margin: 0px 3px 8px 0px; max-width: 300px; width: 32%; }
 .projects li a { color: #fff; font-weight: 300; }
 .projects li a:hover { background: none; } 
-.projects li img { width: 100%; }
-
-	.project { font-size: 1.2em; margin: 0px; padding: 5px; }
-	.project .subtitle { display:block; font-size: 0.8em; }
+.projects li img { min-width: 140px; width: 100%; }
+.projects .title { font-size: 1.2em; margin: 0px; padding: 5px; }
+.projects .subtitle { font-size: 0.8em; margin: 0px; padding: 0px 5px 5px; }
 	
 
