--- a/app/assets/stylesheets/narrow.css
+++ b/app/assets/stylesheets/narrow.css
@@ -25,11 +25,9 @@
 	#menu-toggle { font-size: 1em; margin-top: 10px; }
 	
 	.posts li { overflow: auto;  width: 100%; max-width: 100%; }
-	.posts li img { float: left; height: auto; width: 25%; min-height: 75px; }
-	.posts .title { display: inline-block; font-size: 1.1em; float: left; width: 70%; }
+	.posts li img { float: left; margin-right: 8px; width: 25%; }
+	.posts .title { font-size: 1.1em; }
 		
 	.projects li { width: 100%; max-width: 100%; }
-	.projects li img { float: left; height: auto; margin-right: 8px; min-height: 75px; min-width: 100px; width: 25%; }
-	    
-	    .project .subtitle { display: inline-block; float: left; width: 70%; }
+	.projects li img { float: left; margin-right: 8px; width: 25%; }
 }
